Body background color change.

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@
 }
 */
 body {
-    background-color: #086b69;
+/*    background-color: #086b69;*/
+    background-color: aqua;
     font-family: sans-serif;
 
 }
